# QueryCon

./: LICENSE  README.md  pyproject.toml
scripts/: cli.py  download_audio.py  embed_talks.py  main.py  summarize_talks.py  transcribe_audio.py  utils.py
